Update settings to remove search engines and added icons

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ http://www.example.com || Another Title
 -->
 
 Tools
-https://inbox.google.com/u/0/ || Google Inbox
-https://keep.google.com/u/0/ || Google Keep
-https://calendar.google.com/calendar/ || Google Calendar
-https://drive.google.com/drive/u/0/my-drive || Google Drive
-https://web.whatsapp.com/ || WhatsApp
-https://trello.com/ || Trello
-http://www.inoreader.com/all_articles || Inoreader
-https://talk.birmingham.io/ || birmingham.io
+https://inbox.google.com/u/0/ || Google Inbox || gi || images/google-inbox.png
+https://keep.google.com/u/0/ || Google Keep || gi || images/google-keep.png
+https://calendar.google.com/calendar/ || Google Calendar || gc || images/google-calendar.png
+https://drive.google.com/drive/u/0/my-drive || Google Drive || gd || images/google-drive.png
+https://web.whatsapp.com/ || WhatsApp || wa || images/whatsapp.png
+https://trello.com/ || Trello || tr || images/trello.png
+http://www.inoreader.com/all_articles || Inoreader || in || images/inoreader.png
+https://talk.birmingham.io/ || birmingham.io || bi || images/birmingham-io.png
 
 Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
