--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ https://app.planscope.io/dashboard#projects || Planscope
 https://app.cloud66.com/dashboard || Cloud66
 https://secure.helpscout.net/dashboard/ || Helpscout
 https://makandracards.com/foxsoft || Makandra Cards
+http://www.rubytapas.com/episode-list/ || RubyTapas
 
 Development
 https://github.com/ || GitHub
