Add appsignal and logentries

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ https://app.cloud66.com/dashboard || Cloud66
 https://secure.helpscout.net/dashboard/ || Helpscout
 https://makandracards.com/foxsoft || Makandra Cards
 http://www.rubytapas.com/episode-list/ || RubyTapas
+https://appsignal.com/accounts || AppSignal
+https://logentries.com/app/ || Logentries
 
 Development
 https://github.com/ || GitHub
