--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ https://makandracards.com/foxsoft || Makandra Cards
 http://www.rubytapas.com/episode-list/ || RubyTapas
 https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
+https://www.manifest.ly/dashboard || Manifestly
 
 Development
 https://github.com/ || GitHub
