Add digital ocean and rackspace

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ https://gist.github.com/ || Gist
 https://bitbucket.org/dashboard/overview || Bitbucket
 https://dashboard.heroku.com/apps || Heroku
 https://www.gandi.net/ || Gandi
+https://cloud.digitalocean.com/droplets || DigitalOcean
+https://mycloud.rackspace.co.uk/ || Rackspace
 
 Money
 https://app.youneedabudget.com/ || YNAB
