--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ http://www.rubytapas.com/episode-list/ || RubyTapas
 https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
 https://www.manifest.ly/dashboard || Manifestly
+https://www.tarsnap.com/manage.cgi || Tarsnap
 
 Development
 https://github.com/ || GitHub
