--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://bitbucket.org/dashboard/overview || Bitbucket
 https://dashboard.heroku.com/apps || Heroku
 https://www.gandi.net/ || Gandi
 https://cloud.digitalocean.com/droplets || DigitalOcean
-https://mycloud.rackspace.co.uk/ || Rackspace
+https://login.rackspace.com/ || Rackspace
 https://app.cloud66.com/dashboard || Cloud66
 https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
