--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ https://play.google.com/music/ || Google Play Music
 https://play.pocketcasts.com/ || Pocket Casts
 http://somafm.com/ || Soma.fm
 https://play.spotify.com/browse || Spotify
+http://alexa.amazon.co.uk/ || Alexa
 
 </body>
 </html>
