--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ https://makandracards.com/foxsoft || Makandra Cards
 http://www.rubytapas.com/episode-list/ || RubyTapas
 https://www.manifest.ly/dashboard || Manifestly
 https://www.tarsnap.com/manage.cgi || Tarsnap
+https://foxsoft.signin.aws.amazon.com/console || AWS
 
 Development
 https://github.com/ || GitHub
