--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ http://www.rubytapas.com/episode-list/ || RubyTapas
 https://www.manifest.ly/dashboard || Manifestly
 https://www.tarsnap.com/manage.cgi || Tarsnap
 https://foxsoft.signin.aws.amazon.com/console || AWS
+https://getlighthouse.com/agenda/meetings || Lighthouse
 
 Development
 https://github.com/ || GitHub
