--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ https://login.rackspace.com/ || Rackspace
 https://app.cloud66.com/dashboard || Cloud66
 https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
+https://mailtrap.io/inboxes || Mailtrap
 
 Money
 https://app.youneedabudget.com/ || YNAB
