--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ https://www.manifest.ly/dashboard || Manifestly
 https://www.tarsnap.com/manage.cgi || Tarsnap
 https://foxsoft.signin.aws.amazon.com/console || AWS
 https://getlighthouse.com/agenda/meetings || Lighthouse
+https://app.timetastic.co.uk/wallchart || Timetastic
 
 Development
 https://github.com/ || GitHub
