Add Code Climate

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ https://app.cloud66.com/dashboard || Cloud66
 https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
 https://mailtrap.io/inboxes || Mailtrap
+https://codeclimate.com/dashboard || Code Climate
 
 Money
 https://app.youneedabudget.com/ || YNAB
