--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ https://appsignal.com/accounts || AppSignal
 https://logentries.com/app/ || Logentries
 https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
+https://app.sendgrid.com/ || SendGrid
 
 Money
 https://app.youneedabudget.com/ || YNAB
