--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ https://www.tarsnap.com/manage.cgi || Tarsnap
 https://foxsoft.signin.aws.amazon.com/console || AWS
 https://getlighthouse.com/agenda/meetings || Lighthouse
 https://app.timetastic.co.uk/wallchart || Timetastic
+https://foxsoft.fogbugz.com/ || FogBugz
 
 Development
 https://github.com/ || GitHub
