--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ https://logentries.com/app/ || Logentries
 https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
+https://semaphoreci.com/ || Semaphore
 
 Money
 https://app.youneedabudget.com/ || YNAB
