--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ https://foxsoft.signin.aws.amazon.com/console || AWS
 https://getlighthouse.com/agenda/meetings || Lighthouse
 https://app.timetastic.co.uk/wallchart || Timetastic
 https://jell.com/app/organizations/663714846637818043/home || Jell
+https://foxsoft.app.box.com/files || Box
 
 Development
 https://github.com/ || GitHub
