--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ https://getlighthouse.com/agenda/meetings || Lighthouse
 https://app.timetastic.co.uk/wallchart || Timetastic
 https://jell.com/app/organizations/663714846637818043/home || Jell
 https://foxsoft.app.box.com/files || Box
+https://app.tettra.co/teams/foxsoft/ || Tettra
 
 Development
 https://github.com/ || GitHub
@@ -102,6 +103,7 @@ https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
 https://semaphoreci.com/ || Semaphore
+https://tree.taiga.io/ || Taiga
 
 Money
 https://app.youneedabudget.com/ || YNAB
