--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ https://www.halifax-online.co.uk/personal/logon/login.jsp || Halifax
 https://creditcards.virginmoney.com/VM_Consumer/Login.do || Virgin Money
 
 Media
+http://www.deezer.com/en/ || Deezer
 https://play.google.com/music/ || Google Play Music
 https://play.pocketcasts.com/ || Pocket Casts
 http://somafm.com/ || Soma.fm
-https://play.spotify.com/browse || Spotify
 http://alexa.amazon.co.uk/ || Alexa
 
 </body>
