--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
 http://www.collige.re/ || collige.re
 https://git.foxsoft.co.uk/ || GitLab
+https://foxsoft.teamwork.com/ || Teamwork
 https://foxsoft.letsfreckle.com/time/dashboard/recent || Freckle
 https://forecastapp.com/603710/schedule/team || Forecast
 https://foxsoft.slack.com/messages || Slack
-https://app.planscope.io/dashboard#projects || Planscope
 https://secure.helpscout.net/dashboard/ || Helpscout
 https://makandracards.com/foxsoft || Makandra Cards
 http://www.rubytapas.com/episode-list/ || RubyTapas
@@ -103,7 +103,6 @@ https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
 https://semaphoreci.com/ || Semaphore
-https://tree.taiga.io/ || Taiga
 
 Money
 https://app.youneedabudget.com/ || YNAB
