--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ https://app.timetastic.co.uk/wallchart || Timetastic
 https://jell.com/app/organizations/663714846637818043/home || Jell
 https://foxsoft.app.box.com/files || Box
 https://app.tettra.co/teams/foxsoft/ || Tettra
+https://calendly.com/foxsoft/ || Calendly
 
 Development
 https://github.com/ || GitHub
