--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
 https://semaphoreci.com/ || Semaphore
+https://ci.solanolabs.com/ || Solano CI
 
 Money
 https://app.youneedabudget.com/ || YNAB
