--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ https://talk.birmingham.io/ || birmingham.io || bi || images/birmingham-io.png
 Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
 http://www.collige.re/ || collige.re
+http://amigo.collige.re/ || Amigo
 https://git.foxsoft.co.uk/ || GitLab
 https://foxsoft.teamwork.com/ || Teamwork
 https://foxsoft.letsfreckle.com/time/dashboard/recent || Freckle
