--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://trello.com/ || Trello || tr || images/trello.png
 https://paper.dropbox.com/ || Dropbox Paper || dp || images/dropbox-paper.png
 http://www.inoreader.com/all_articles || Inoreader || in || images/inoreader.png
 https://talk.birmingham.io/ || birmingham.io || bi || images/birmingham-io.png
-
+http://www.myfitnesspal.com/ || MyFitnessPal || my || images/google-keep.png
 
 Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
