Add amazon platinum

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Money
 https://app.youneedabudget.com/ || YNAB
 https://www.halifax-online.co.uk/personal/logon/login.jsp || Halifax
 https://creditcards.virginmoney.com/VM_Consumer/Login.do || Virgin Money
+https://portal.newdaycards.com/accounts/amazon/login || Amazon Platinum
 
 Media
 http://www.deezer.com/en/ || Deezer
