--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
 http://www.collige.re/ || collige.re
 http://amigo.collige.re/ || Amigo
+https://foxsoft.pipedrive.com/ || Pipedrive
 https://git.foxsoft.co.uk/ || GitLab
 https://foxsoft.teamwork.com/ || Teamwork
 https://foxsoft.letsfreckle.com/time/dashboard/recent || Freckle
