Remove virgin, add sweep

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ http://www.myfitnesspal.com/ || MyFitnessPal || my || images/google-keep.png
 Foxsoft
 http://foxsoft.co.uk/ || Foxsoft
 http://www.collige.re/ || collige.re
+https://sweep.cards/boards || Sweep
 http://amigo.collige.re/ || Amigo
 https://foxsoft.pipedrive.com/ || Pipedrive
 https://git.foxsoft.co.uk/ || GitLab
@@ -111,7 +112,6 @@ https://ci.solanolabs.com/ || Solano CI
 Money
 https://app.youneedabudget.com/ || YNAB
 https://www.halifax-online.co.uk/personal/logon/login.jsp || Halifax
-https://creditcards.virginmoney.com/VM_Consumer/Login.do || Virgin Money
 https://portal.newdaycards.com/accounts/amazon/login || Amazon Platinum
 
 Media
