Add Saurus Towers

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ http://www.example.com || Another Title
 -->
 
 Tools
+https://saurustowers.duckdns.org:8123/ || Saurus Towers || st ||  images/home-assistant.png
 https://inbox.google.com/u/0/ || Google Inbox || gi || images/google-inbox.png
 https://keep.google.com/u/0/ || Google Keep || gi || images/google-keep.png
 https://calendar.google.com/calendar/ || Google Calendar || gc || images/google-calendar.png
