--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
 https://semaphoreci.com/ || Semaphore
 https://ci.solanolabs.com/ || Solano CI
+https://ngrok.com/ || ngrok
 
 Money
 https://app.youneedabudget.com/ || YNAB
