--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ http://amigo.collige.re/ || Amigo
 https://foxsoft.pipedrive.com/ || Pipedrive
 https://git.foxsoft.co.uk/ || GitLab
 https://foxsoft.teamwork.com/ || Teamwork
+https://app.forecast.it/ || Forecast It
 https://foxsoft.letsfreckle.com/time/dashboard/recent || Freckle
-https://forecastapp.com/603710/schedule/team || Forecast
 https://foxsoft.slack.com/messages || Slack
 https://secure.helpscout.net/dashboard/ || Helpscout
 https://makandracards.com/foxsoft || Makandra Cards
