--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ https://logentries.com/app/ || Logentries
 https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
+https://app.sparkpost.com/dashboard || SparkPost
 https://semaphoreci.com/ || Semaphore
 https://ci.solanolabs.com/ || Solano CI
 https://ngrok.com/ || ngrok
