--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://www.tarsnap.com/manage.cgi || Tarsnap
 https://foxsoft.signin.aws.amazon.com/console || AWS
 https://getlighthouse.com/agenda/meetings || Lighthouse
 https://app.timetastic.co.uk/wallchart || Timetastic
-https://jell.com/app/organizations/663714846637818043/home || Jell
+https://statushero.com/teams/foxsoft/reports/current || Status Hero
 https://foxsoft.app.box.com/files || Box
 https://app.tettra.co/teams/foxsoft/ || Tettra
 https://calendly.com/foxsoft/ || Calendly
