--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://cloud.digitalocean.com/droplets || DigitalOcean
 https://login.rackspace.com/ || Rackspace
 https://app.cloud66.com/dashboard || Cloud66
 https://appsignal.com/accounts || AppSignal
-https://logentries.com/app/ || Logentries
+https://app.timber.io/foxsoft/apps || Timber.io
 https://mailtrap.io/inboxes || Mailtrap
 https://codeclimate.com/dashboard || Code Climate
 https://app.sendgrid.com/ || SendGrid
