Update Freckle to Noko

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ https://foxsoft.pipedrive.com/ || Pipedrive
 https://git.foxsoft.co.uk/ || GitLab
 https://foxsoft.teamwork.com/ || Teamwork
 https://app.forecast.it/ || Forecast It
-https://foxsoft.letsfreckle.com/time/dashboard/recent || Freckle
+https://foxsoft.nokotime.com/time/dashboard/recent || Noko
 https://foxsoft.slack.com/messages || Slack
 https://secure.helpscout.net/dashboard/ || Helpscout
 https://makandracards.com/foxsoft || Makandra Cards
